2001-05-02  Richard Braakman  <dark@wapit.com>

	* gw/smsc_cimd2.c: Fix encoding of text messages that have UDH.
	(It got the length wrong due to a _probable_ misreading of the
	spec.  If SMSCs implement what we thought it had said, then we
        have a problem.)

2001-05-02  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c: Made octstr_get_char() not crash if pos < 0.
	It now returns -1 instead.

2001-05-02  Richard Braakman  <dark@wapit.com>

	* gw/wap_push_ppg.h, wap_push_pap.c: Renamed TRUE and FALSE
	to PAP_TRUE and PAP_FALSE.  (These are enumerated protocol
	values.)  Needed for portability to systems that predefine
	TRUE and FALSE macros.

2001-04-30  Richard Braakman  <dark@wapit.com>

	* gw/smsc_{at,cimd2,ois,smpp}.c, gw/sms.h, gw/smpp_pdu.h:
        Standardized on two data coding scheme values, called DCS_GSM_TEXT
        and DCS_OCTET_DATA.  Not all protocols can use these, but at least
	the ones that do will all use the same values.  Both have now been
        chosen to set only the alphabet, and leave message class alone.

2001-04-29  Derry Hamilton <rasilon@tardis.ed.ac.uk>

	* configure.in,configure: Allow libxml versions between
	2.2.10 and 2.2.19.

2001-04-26  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc.c, gw/smsc_p.h, gw/smsc_smpp.c, gw/smscconn.c,
	gw/smscconn_p.h: Converted SMPP driver to use the SMSCConn
	interface. This is needed to improve reliablity of the driver,
	which will happen next.

2001-04-26  Richard Braakman  <dark@wapit.com>

        * gw/smsc_cimd2.c: Reopen connection if SMSC does not respond
        to "alive" request.

2001-04-26  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Handle 100-Continue responses.

2001-04-26  Richard Braakman  <dark@wapit.com>

	* gw/smsc_cimd2.c: Stopped sending "delivery request" when
        logging in.  It is not needed in the normal configuration, and
        it confuses some SMSCs.  Thanks to Antti Valtokari for tracking